// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChildrenInput renders correctly 1`] = `
<WithStyles(Grid)
  container={true}
  direction="column"
>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(Typography)
      variant="h6"
    >
      Children
    </WithStyles(Typography)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(List)>
      <WithStyles(ListItem)
        key="0"
      >
        <WithStyles(ListItemText)
          primary="Horst Hansen"
        />
        <WithStyles(ListItemSecondaryAction)>
          <WithStyles(IconButton)
            onClick={[Function]}
          >
            <pure(DeleteIcon) />
          </WithStyles(IconButton)>
        </WithStyles(ListItemSecondaryAction)>
      </WithStyles(ListItem)>
    </WithStyles(List)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    container={true}
    item={true}
  >
    <WithStyles(Grid)
      item={true}
      xs={11}
    >
      <SearchableDropdown
        helperText="Add children"
        includeItem={[Function]}
        itemToString={[Function]}
        items={
          Array [
            Immutable.UserN {
              "id": "jkldsfjlk",
              "username": "hball",
              "children": Array [],
              "firstName": "Hanni",
              "lastName": "Ball",
              "displayname": "Hanni Ball",
              "email": "hanni@ball.de",
              "birthday": "2100-01-01",
              "role": "student",
              "isAdmin": false,
              "childrenIds": Array [],
              "class": undefined,
              "language": undefined,
              "managerNotes": undefined,
              "subscribedToWeeklySummary": undefined,
            },
          ]
        }
        label="Child"
        onSelect={[Function]}
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={1}
    >
      <WithStyles(Button)
        className="add"
        disabled={false}
        mini={true}
        onClick={[Function]}
        variant="fab"
      >
        <pure(AddIcon) />
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`ChildrenInput renders when no additional users are available 1`] = `
<WithStyles(Grid)
  container={true}
  direction="column"
>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(Typography)
      variant="h6"
    >
      Children
    </WithStyles(Typography)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(List)>
      <WithStyles(ListItem)
        key="0"
      >
        <WithStyles(ListItemText)
          primary="Horst Hansen"
        />
        <WithStyles(ListItemSecondaryAction)>
          <WithStyles(IconButton)
            onClick={[Function]}
          >
            <pure(DeleteIcon) />
          </WithStyles(IconButton)>
        </WithStyles(ListItemSecondaryAction)>
      </WithStyles(ListItem)>
    </WithStyles(List)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    container={true}
    item={true}
  >
    <WithStyles(Grid)
      item={true}
      xs={11}
    >
      <SearchableDropdown
        helperText="Add children"
        includeItem={[Function]}
        itemToString={[Function]}
        items={Array []}
        label="Child"
        onSelect={[Function]}
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={1}
    >
      <WithStyles(Button)
        className="add"
        disabled={true}
        mini={true}
        onClick={[Function]}
        variant="fab"
      >
        <pure(AddIcon) />
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;
